@@ -1,0 +1,25 @@
+package edu.colorado.phet.acidbasesolutions.model.solutions;
+
+
+public class PureWaterSolution implements IAqueousSolution {
+    
+    public PureWaterSolution() {
+        
+    }
+
+    public double getHydroniumConcentration() {
+        // TODO Auto-generated method stub
+        return 0;
+    }
+
+    public double getHydroxideConcentration() {
+        // TODO Auto-generated method stub
+        return 0;
+    }
+
+    public double getWaterConcentration() {
+        // TODO Auto-generated method stub
+        return 0;
+    }
+
+}
