@@ -1,3 +1,4 @@
+1/23/08 - model for base solutions
 1/23/09 - model for pure water, acids, bases, acid solutions
 1/20/09 - start fleshing out user interface of first module
 1/19/09 - framework for all modules and persistence
